#101 Fix gap on top of window

--- a/src/modules/loadscreen/_loadscreen.scss
+++ b/src/modules/loadscreen/_loadscreen.scss
@@ -1,5 +1,5 @@
 // Hide titlebar
-.theme-dark .platform-win .container-2RRFHK{
+.theme-dark .container-2RRFHK{
     padding-top: 32px;
     top: -32px;
 }
